# Slicer-CompVis

./: .gitignore  LICENSE
CompVis/: CMakeCache.txt  CMakeLists.txt
CompVis/AutoSegmentation/: AutoSegmentation.py  CMakeLists.txt
CompVis/CompVis/: CMakeCache.txt  CMakeLists.txt  qSlicerCompVisModule.cxx  qSlicerCompVisModule.h  qSlicerCompVisModuleWidget.cxx  qSlicerCompVisModuleWidget.h
CompVis/CompVis/Logic/: vtkSlicerCompVisLogic.cxx  vtkSlicerCompVisLogic.h
CompVis/CompVis/Resources/: qSlicerCompVisModule.qrc
CompVis/CompVis/Resources/UI/: qSlicerCompVisFooBarWidget.ui  qSlicerCompVisModuleWidget.ui
CompVis/CompVis/Widgets/: qSlicerCompVisFooBarWidget.cxx  qSlicerCompVisFooBarWidget.h
CompVis/CompVisPython/: CMakeLists.txt  CompVisPython.py
